k8s/microsservices/volunteer-service/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: volunteer-service
  namespace: volunteer-ns
  labels:
    app: volunteer-service
spec:
  replicas: 3
  strategy:
    canary:
      analysis:
        templates:
        - templateName: volunteer-golden-signals-analysis
        args:
        - name: canary-hash
          valueFrom:
            podTemplateHashValue: Latest
      steps:
      - setWeight: 20
      - pause:
          duration: 3m
      - setWeight: 50
      - pause:
          duration: 3m
  selector:
    matchLabels:
      app: volunteer-service
  template:
    metadata:
      labels:
        app: volunteer-service
    spec:
      serviceAccountName: sa-gke
      terminationGracePeriodSeconds: 30
      containers:
      - name: volunteer-service
        image: volunteer-service
        imagePullPolicy: Always
        lifecycle:
          preStop:
            httpGet:
              path: /pre-stop
              port: 8083
        startupProbe:
          httpGet:
            path: /health
            port: 8083
          failureThreshold: 30
          periodSeconds: 2
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8083
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8083
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        ports:
        - containerPort: 8083
        resources:
          requests:
            cpu: 78m
            memory: 64Mi
          limits:
            cpu: 512m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: volunteer-service
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: volunteer-service
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
