k8s/microsservices/volunteer-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: volunteer-service
  namespace: volunteer-ns
spec:
  type: ClusterIP
  selector:
    app: volunteer-service
  ports:
    - name: http
      port: 80
      targetPort: 8083
